# trk

./: AGENTS.md  CHANGELOG.md  README.md  gitignore.template  pyproject.toml  state.json
.agents/skills/track-create/: SKILL.md
.agents/skills/trk-create/: SKILL.md
src/track/: __init__.py  __main__.py  cli.py  storage.py
src/trk/: __init__.py  __main__.py  cli.py  display.py  exceptions.py  export.py  service.py  state.py  storage.py
src/trk/commands/: __init__.py  hypotheses.py  notes.py  queue.py  shared.py
tests/: test_cli.py  test_export.py  test_state.py
