[project]
name = "track"
version = "0.1.0"
description = "Generic work tracker - adapt to any domain (research, migrations, debugging)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
track = "track.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/track"]

[tool.pytest.ini_options]
testpaths = ["tests"]
